tests/baselines/reference/superInConstructorParam1.errors.txt
==== tests/cases/compiler/superInConstructorParam1.ts (2 errors) ====
    class B {
      public foo(): number {
        return 0;
      }
    }
    
    class C extends B {
      constructor(a = super.foo()) {
      ~~~~~~~~~~~
!!! error TS2105: Constructors for derived classes must contain a 'super' call.
                      ~~~~~
!!! error TS2193: 'super' cannot be referenced in constructor arguments.
      }
    }